# tako-switch

./: .gitignore  LICENSE  README.md  index.html  package.json
.github/workflows/: release.yml
docs/: development.md  testing.md  user-guide.md
scripts/: generate-icon.mjs  generate-release-notes.mjs  sync-version-from-tag.mjs
src/: App.css  App.tsx  appUpdates.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: providers.default.json  providers.json
src-tauri/icons/: icon.icns  icon.ico.bak
src-tauri/src/: backups.rs  commands.rs  config_paths.rs  env_vars.rs  lib.rs  main.rs  models.rs  redaction.rs  tools.rs  utils.rs
src-tauri/src/providers/: loader.rs  mod.rs  tako.rs  types.rs  validation.rs
src-tauri/src/tests/: backups.rs  commands.rs  env_vars.rs  env_vars_windows.rs  mod.rs  redaction.rs  tools.rs
src-tauri/src/tests/providers/: loader.rs  tako.rs  validation.rs
src-tauri/src/tools/: app_detection.rs
src/integrations/tako/: api.ts  auth.ts  index.ts  providerConfig.ts  sessionStore.ts  types.ts
src/integrations/tako/config/: account-providers.json
