[package]
name = "tako-switch"
version = "0.4.0"
description = "One-click Codex and Claude Code configuration importer"
authors = ["Tako"]
edition = "2021"

[lib]
name = "tako_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-deep-link = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-single-instance = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml_edit = "0.22"
url = "2"
tauri-plugin-store = "2.4.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
